packages/stylist/tests/macro_integrations/nested_at_rule-fail.stderr
error: Can not nest @-rules (yet)
 --> $DIR/nested_at_rule-fail.rs:5:13
  |
5 |             @media print {
  |             ^^^^^^^^^^^^

error: Can not nest @-rules (yet)
 --> $DIR/nested_at_rule-fail.rs:8:13
  |
8 |             @supports (display: grid) {
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^
